--- a/CosmoQuiz/Base.lproj/LaunchScreen.xib
+++ b/CosmoQuiz/Base.lproj/LaunchScreen.xib
@@ -26,10 +26,8 @@
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="RocketLogo" translatesAutoresizingMaskIntoConstraints="NO" id="w8D-72-ffl">
-                    <rect key="frame" x="109" y="40" width="137" height="112"/>
-                </imageView>
             </subviews>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="kId-c2-rCX" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="bottom" multiplier="1/3" constant="1" id="5cJ-9S-tgC"/>
                 <constraint firstAttribute="centerX" secondItem="kId-c2-rCX" secondAttribute="centerX" id="Koa-jz-hwk"/>
@@ -45,6 +43,5 @@
     </objects>
     <resources>
         <image name="Image" width="800" height="450"/>
-        <image name="RocketLogo" width="1242" height="2208"/>
     </resources>
 </document>
